# susu-backend-technical-test

./: .pylintrc  README.md  pyproject.toml
.circleci/: config.yml
backend/: main.py
backend/db/: in_memory_database.py
backend/helpers/: grouping.py
backend/logic/: transactions.py
backend/models/: models.py
tests/: tables_test.json  test_transactions.py
